--- a/default/data/ui/views/security__monitor__threats.xml
+++ b/default/data/ui/views/security__monitor__threats.xml
@@ -40,6 +40,9 @@ Ingest machine data from multi-cloud and on-premises deployments for full visibi
               <a target="_blank" href="https://www.splunk.com/pdfs/technical-briefs/splunk-for-advanced-analytics-and-threat-detection-tech-brief.pdf">Splunk for Advanced Analytics and Threat Detection - Tech Brief</a>
           </li>
           <li>
+              <a target="_blank" href="https://lantern.splunk.com/Security_Use_Case_Guidance/Threat_Intelligence_and_Threat_Hunting">Threat Intelligence and Threat Hunting - Splunk Lantern</a>
+          </li>
+          <li>
               <a target="_blank" href="https://www.splunk.com/en_us/blog/security/a-unified-security-operations-platform-splunk-mission-control.html">A Unified Security Operations Platform: Splunk Mission Control - Blog</a>
           </li>
           <li>
